# ucf08_husky

./: CMakeLists.txt  README.md  package.xml
config/: localization.yaml
launch/: VLP16_horiz.launch  VLP16_vert.launch  boson.launch  camera_delay.launch  front_camera.launch  microstrain.launch  microstrain_delay.launch  tower_camera.launch
meshes/: adk.dae  camera_assy.dae  gps_tower.dae  occam.dae  short_tower.dae  tall_tower.dae  vlp16.dae
scripts/: ucf08_envar
urdf/: urdf_husky_description.urdf.xacro
